syntax = "proto3";

package course;

service CourseService {
    rpc GetCourseDetails(GetCourseDetailsRequest) returns (Course);
}

message GetCourseDetailsRequest {
    string courseId = 1;
}

message Course {
   string id = 1;
   string  title = 2;
   string description = 3;
   string thumbnail= 4 ;
   string  level = 5;
   string categoryId = 6;
   int32 price = 7;
   bool isFree = 8;
   string  status = 9;
   Instructor instructor = 11;
   int32 averageRating = 12;
   int32  ratingCount = 13;
   int32 enrollmentCount = 14;
   string createdAt = 15;
   string updatedAt = 16;
   string publishedAt = 17;
}

message Instructor {
    string id =  1;
    string name = 2;
}